--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,20 @@
         android:theme="@style/Theme.App"
         tools:targetApi="31">
         <activity
-            android:name=".UI.ProductDetails"
-            android:label="Vacation Details and Excursion list"
+            android:name=".UI.PartDetails"
+            android:label="Part Details"
+            android:parentActivityName=".UI.ProductDetails"
             android:exported="false" />
         <activity
+            android:name=".UI.ProductDetails"
+            android:exported="false"
+            android:label="Vacation Details and Excursion list"
+            android:parentActivityName=".UI.ProductDetails" />
+        <activity
             android:name=".UI.ProductList"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Product List"
+            android:parentActivityName=".UI.MainActivity" />
         <activity
             android:name=".UI.MainActivity"
             android:exported="true">
